--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+bson==0.3.3
 Flask==0.10.1
 gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 psycopg2==2.6
+pytz==2014.10
 Werkzeug==0.10.1
