--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
+bcdoc==0.13.0
+certifi==14.5.14
+cloudinary==1.0.21
+colorama==0.3.3
+docutils==0.12
 Flask==0.10.1
 Flask-SQLAlchemy==2.0
 gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
+jmespath==0.6.1
 MarkupSafe==0.23
+oauthlib==0.7.2
 psycopg2==2.6
+pyasn1==0.1.7
+python-dateutil==2.4.1
 pytz==2014.10
+requests==2.6.0
+requests-oauthlib==0.4.2
+rsa==3.1.4
+six==1.9.0
 SQLAlchemy==0.9.9
 Werkzeug==0.10.1
