--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cloudinary==1.0.21
 colorama==0.3.3
 docutils==0.12
 Flask==0.10.1
+Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
 gunicorn==19.3.0
 itsdangerous==0.24
